Final project functionality almost done!