@@ -6,10 +6,7 @@ import org.jdbi.v3.core.mapper.reflect.ConstructorMapper;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class Database {
@@ -63,26 +60,6 @@ public class Database {
 
     private static final List<Car> allCars = Arrays.asList(CARS);
 
-//    private final Jdbi jdbi;
-//
-//    public Database() {
-//        String path;
-//        try {
-//            URL resource = getClass().getResource("/aaronbearon/finals2/cars.csv");
-//            assert (resource != null);
-//            path = Path.of(resource.toURI()).toString().replace('\\', '/');
-//        } catch (URISyntaxException e) {
-//            throw new AssertionError(e); // should not happen
-//        }
-//
-//        jdbi = Jdbi.create("jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1", "sa", "");
-//        jdbi.registerRowMapper(Car.class, ConstructorMapper.of(Car.class));
-//        jdbi.withHandle(handle -> {
-//            handle.execute("CREATE TABLE cars AS SELECT * FROM CSVREAD('" + path + "');");
-//            return null;
-//        });
-//    }
-
     // Query the database for a list of cars matching the selected filters.
     public List<Car> getFilteredCars(Set<String> selectedBrands,
                                      Set<String> selectedTypes,
@@ -114,6 +91,6 @@ public class Database {
                 // Filter by Cylinder Range
                 .filter(car -> car.cylinders() >= cylinderMin && car.cylinders() <= cylinderMax)
 
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparingDouble(Car::price)).toList();
     }
 }
